# Ray

./: .gitignore  LICENSE  ReadMe.md  package.json
.agents/: plan.md  spec.md
docs/: 01-mathematical-foundations.md  02-geometry-and-intersection.md  03-optics-and-materials.md  04-cameras-rendering-and-scene.md  README.md  Ray Tracing.json  cameras-rendering-and-scene.md  controller-json-rules.md  current-architecture.md  current-scene-json.md  engine-json-protocol.md  geometry-and-intersection.md  geometry-intersection-theory.md  geometry-shape-details.md  material-capability-coverage.md  material-system-design.md  medium-and-caustics-modernization-plan.md  multidimensional-rendering.md  non-euclidean-coordinate-system.md  optics-and-materials.md  rendering-flow-cameras-and-scenes.md  scene-json-current.md  spectral-modernization-plan.md  studio-json-protocol.md
engine/: SYSTEM.md  go.mod  go.sum  main.go
examples/: dispersion-three-balls.json  prism refraction.json
src-cpp/: CMakeLists.txt  CMakeSettings.json
src-cpp/202110/: RayTracing.cpp  RayTracing.h
src-cpp/geometry/: bezier_curve.h  build_point_set.h  delaunay.h  ear_clipping.h  ear_clipping.py  fractal.h  intersection.h  marching_cubes.h  marching_cubes.py  perlin_noise.h  struct.h
src-cpp/image/: hsv.h
src-cpp/image/image_processing/: basic_operate.h  operates.h  utils.h
src-cpp/ray_tracing/: main.cpp  ray_tracing.h  ray_tracing.md  ray_tracing_manager.h
src-cpp/ray_tracing/optics/: haze.h
src-cpp/ray_tracing/properties/: material.h
src-cpp/ray_tracing/properties/shape/: plane.h  sphere.h
(+536 files in other folders)
